# gaoziyuan-ops

./: CMakeLists.txt  README.md  vector_add.cu
flash_attention/: README.md
kernel_profiling/: README.md  add.cu
reduce/: README.md  baseline.cu  reduce_v0.cu  reduce_v1.cu  reduce_v2.cu  reduce_v3.cu  reduce_v4.cu  reduce_v4_2.cu  reduce_v5.cu  reduce_v6.cu  reduce_v7.cu  reduce_v8.cu
sgemm/: README.md  sgemm_v0.cu  sgemm_v1.cu  sgemm_v2.cu  sgemm_v3.cu  sgemm_v4.cu  sgemm_v5.cu  sgemm_v6.cu  sgemm_v7.cu
transpose/: README.md  transpose_v1.cu  transpose_v2.cu
